--- a/style.css
+++ b/style.css
@@ -2,10 +2,13 @@
 	--color-primary-dark-1: hsl(158, 36%, 37%);
 	--color-primary-light-1: hsl(30, 38%, 92%);
 
-	--color-dark-blue-: hsl(212, 21%, 14%);
-	--color-dark-gray-blue-: hsl(228, 12%, 48%);
+	--color-dark-blue: hsl(212, 21%, 14%);
+	--color-dark-gray-blue: hsl(228, 12%, 48%);
 
 	--color-white: hsl(0, 0%, 100%);
+
+	--font-family-secondary: 'Fraunces', serif;
+	--font-family-primary: 'Montserrat', sans-serif;
 }
 
 *,
@@ -21,22 +24,119 @@ html {
 	font-size: 62.5%;
 }
 
-html,
-body {
-	height: 100%;
-}
-
-img {
+img,
+svg {
 	display: block;
 	height: 100%;
 }
 
 body {
-	font-family: 'Montserrat', sans-serif;
+	font-family: var(--font-family-primary);
+	background-color: var(--color-primary-light-1);
+	padding: 4rem 0;
+	line-height: 1;
+	color: var(--color-dark-gray-blue);
 }
 
 /* UTILITY CLASSES */
 .container {
-	max-width: 114rem;
+	max-width: 65rem;
 	margin: 0 auto;
+}
+
+.preview-card {
+	display: flex;
+	background-color: var(--color-white);
+	border-radius: 11px;
+	overflow: hidden;
+}
+
+.preview-card-img,
+.preview-card-content {
+	flex-basis: 50%;
+}
+
+.preview-card-img {
+	background: url('./assets/imgs/image-product-desktop.jpg') no-repeat center
+		center/cover;
+}
+
+.preview-card-content {
+	padding: 4rem;
+	display: flex;
+	flex-direction: column;
+	gap: 2.4rem;
+}
+
+.previw-card-sub-heading {
+	text-transform: uppercase;
+	font-size: 1.4rem;
+	letter-spacing: 5px;
+	font-weight: 500;
+	color: #9e9e9e;
+}
+
+.preview-card-heading {
+	font-size: 4rem;
+	font-weight: 700;
+	font-family: var(--font-family-secondary);
+	color: var(--color-dark-blue);
+}
+
+.preview-card-text {
+	font-size: 1.4rem;
+	line-height: 1.7;
+}
+
+.preview-card-price {
+	display: flex;
+	align-items: center;
+	gap: 3rem;
+}
+
+.preview-card-price span:first-child {
+	font-size: 4rem;
+	font-weight: 700;
+	font-family: var(--font-family-secondary);
+	color: var(--color-primary-dark-1);
+}
+
+.preview-card-price span:last-child {
+	font-size: 1.4rem;
+	text-decoration: line-through;
+}
+
+.preview-card-button {
+	border: none;
+	font-size: 1.6rem;
+	font-weight: 600;
+	color: var(--color-white);
+	padding: 2rem;
+	border-radius: 5px;
+	background-color: var(--color-primary-dark-1);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 1rem;
+}
+
+@media (max-width: 40em) {
+	.container {
+		max-width: 35rem;
+	}
+
+	.preview-card {
+		flex-direction: column;
+	}
+
+	.preview-card-img,
+	.preview-card-content {
+		flex-basis: auto;
+	}
+
+	.preview-card-img {
+		height: 25rem;
+		background: url('./assets/imgs/image-product-mobile.jpg') no-repeat center
+			center/cover;
+	}
 }
